--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
       padding: 0;
       background: url('fundo.jpg') no-repeat center center fixed;
       background-size: cover;
-      height: 120%;
+      height: 100vh;
+      font-family: 'Roboto', sans-serif;
     }
 
     #video-container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 600px;
-      height: 350px;
+      position: relative;
+      width: 100%;
+      max-width: 600px; /* Defina o máximo desejado */
+      margin: 0 auto; /* Centraliza o vídeo */
       overflow: hidden;
       border: 6px solid #00ff00;
       border-radius: 50px;
@@ -31,10 +30,9 @@
     }
 
     #video-wrapper {
-      border-radius: 50px;
-      overflow: hidden;
       width: 100%;
-      height: 100%;
+      padding-top: 56.25%; /* 16:9 aspect ratio */
+      position: relative;
     }
 
     #video-wrapper video {
@@ -46,21 +44,21 @@
 
     #small-image {
       position: absolute;
-      top: 3%;
-      right: 5%;
-      width: 350px;
+      top: 10px;
+      right: 10px;
+      max-width: 100%;
       height: auto;
       z-index: 2;
     }
 
     #buy-button {
       position: absolute;
-      top: 80%;
-      left: 22%;
+      bottom: 20px;
+      left: 50%;
       transform: translateX(-50%);
       background: linear-gradient(to bottom, #97cf27, #40c91e);
       color: #eef4ed;
-      padding: 4px 4px;
+      padding: 10px 20px;
       font-size: 20px;
       border: 3px solid #51f83e;
       border-radius: 35px;
@@ -70,71 +68,11 @@
       z-index: 3;
     }
 
-    #countdown {
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translateX(-50%);
-      color: #fff;
-      font-size: 24px;
-      display: flex;
-      justify-content: space-around;
-      align-items: flex-start;
-      flex-wrap: nowrap;
-    }
-
-    #countdown-header {
-      color: #fff;
-      font-size: 24px;
-    }
-
-    .countdown-label {
-      font-size: 50px;
-      font-family: 'Roboto', sans-serif;
-      font-weight: bold;
-      color: #b7f38d;
-      margin-bottom: 5px;
-      text-align: center;
-      padding: 30px;
-      margin: 0;
-      line-height: 1;
-    }
-
-    .countdown-block {
-      background-color: #8ae832;
-      padding: 45px;
-      border-radius: 58px;
-      text-align: center;
-      margin: 0 20px 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      border: 7px solid #00ff00;
-      box-shadow: 0 0 15px rgba(0, 255, 0, 0.8);
-    }
-
-    .countdown-number {
-      font-size: 80px;
-      font-weight: bold;
-      color: #004400;
-    }
-
-    .countdown-label-small {
-      font-size: 45px;
-      color: #fff;
-      margin-top: 5px;
-    }
-
-    #promotion-text {
-      position: absolute;
-      top: 90%;
-      left: 50%;
-      transform: translateX(-50%);
-      font-family: 'Roboto', sans-serif;
-      font-size: 18px;
-      color: #fff;
-      text-align: center;
-      z-index: 4;
+    /* Adicione estilos responsivos conforme necessário */
+    @media screen and (max-width: 600px) {
+      #video-container {
+        max-width: 100%;
+      }
     }
 
     @keyframes pulse {
