--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MEGA FLUXO PRÓ GAIN</title>
-  <link rel="icon" href="icone.png" type="image/x-icon">
+  <link rel="icon" href="icone.jpg" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     body {
@@ -21,8 +21,8 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 350px;
-      height: 250px;
+      width: 600px;
+      height: 325px;
       overflow: hidden;
       border: 6px solid #00ff00;
       border-radius: 50px;
@@ -47,7 +47,7 @@
     #small-image {
       position: absolute;
       top: 3%;
-      right: 5%;
+      right: 40%;
       width: 350px;
       height: auto;
       z-index: 2;
@@ -56,11 +56,11 @@
     #buy-button {
       position: absolute;
       top: 80%;
-      left: 22%;
+      left: 43%;
       transform: translateX(-50%);
       background: linear-gradient(to bottom, #97cf27, #40c91e);
       color: #eef4ed;
-      padding: 4px 4px;
+      padding: 6px 6px;
       font-size: 20px;
       border: 3px solid #51f83e;
       border-radius: 35px;
@@ -158,7 +158,7 @@
 
   <div id="video-container">
     <div id="video-wrapper">
-      <video id="main-video" controls poster="capa.png">
+      <video id="main-video" controls poster="capa.jpg">
         <source src="video.mp4" type="video/mp4"> Seu navegador não suporta o elemento de vídeo.
       </video>
       <audio id="background-audio" autoplay loop>
@@ -175,11 +175,11 @@
 
   <script>
     function redirectToExternalSite() {
-      window.location.href = 'https://go.perfectpay.com.br/PPPB8721';
+      window.location.href = 'https://go.perfectpay.com.br/PPU38CNMK2R';
     }
   </script>
 
-
+ 
 </body>
 
 </html>
