--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 800px;
-  height: 450px;
+  width: 600px;
+  height: 400px;
   overflow: hidden;
   border: 6px solid #00ff00;
   border-radius: 50px;
@@ -32,16 +32,16 @@
 
 #video-wrapper {
   position: relative;
-  width: 100%;
-  max-width: 800px; /* Largura máxima do contêiner */
-  margin: 0 auto; /* Centraliza o contêiner horizontalmente */
+  width: 100%; /* Defina a largura do contêiner para 100% */
+  height: 100%; /* Defina a altura do contêiner para 100% */
   overflow: hidden;
 }
 
 #main-video {
   display: block;
-  width: 100%; /* Use 'width: 100%' para ocupar todo o espaço sem distorções */
-  height: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 
@@ -55,9 +55,9 @@
 
     #small-image {
       position: absolute;
-      top: 10px;
+      top: 5px;
       right: 44%;
-      width: 210px;
+      width: 190px;
       height: auto;
       z-index: 2;
     }
