--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MEGA FLUXO PRÓ</title>
+  <title>MEGA FLUXO PRÓ GAIN</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="icon" href="icone.jpg" type="image/x-icon">
   <style>
@@ -21,8 +21,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
-  height: 215px;
+  width: 370px;
+  height: 195px;
   overflow: hidden;
   border: 6px solid #00ff00;
   border-radius: 50px;
@@ -56,8 +56,8 @@
     #small-image {
       position: absolute;
       top: 3px;
-      right: 33%;
-      width: 160px;
+      right: 43%;
+      width: 180px;
       height: auto;
       z-index: 2;
     }
@@ -65,7 +65,7 @@
     #buy-button {
       position: absolute;
       top: 80%;
-      left: 40%;
+      left: 27%;
       transform: translateX(-50%);
       background: linear-gradient(to bottom, #97cf27, #40c91e);
       color: #eef4ed;
