--- a/index.html
+++ b/index.html
@@ -17,47 +17,40 @@
     }
 
     #video-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 370px;
-  height: 195px;
-  overflow: hidden;
-  border: 6px solid #00ff00;
-  border-radius: 50px;
-  box-shadow: 0 0 20px rgba(0, 255, 0, 0.8);
-  z-index: 1;
-}
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 370px;
+      height: 195px;
+      overflow: hidden;
+      border: 6px solid #00ff00;
+      border-radius: 50px;
+      box-shadow: 0 0 20px rgba(0, 255, 0, 0.8);
+      z-index: 1;
+    }
 
-#video-wrapper {
-  position: relative;
-  width: 100%; /* Defina a largura do contêiner para 100% */
-  height: 100%; /* Defina a altura do contêiner para 100% */
-  overflow: hidden;
-}
+    #video-wrapper {
+      position: relative;
+      width: 100%;
+      /* Defina a largura do contêiner para 100% */
+      height: 100%;
+      /* Defina a altura do contêiner para 100% */
+      overflow: hidden;
+    }
 
-#main-video {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-
-
-
-
-
-
-
-
+    #main-video {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
     #small-image {
       position: absolute;
       top: 3px;
       right: 28%;
-      width: 190px;
+      width: 210px;
       height: auto;
       z-index: 2;
     }
@@ -79,8 +72,6 @@
       z-index: 3;
     }
 
-   
-
     @keyframes pulse {
       0% {
         transform: scale(1);
@@ -96,10 +87,16 @@
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <script>
+    function redirectToLink() {
+      // Substitua o URL abaixo pelo link desejado
+      var link = "https://go.perfectpay.com.br/PPU38CNON8M";
+      window.location.href = link;
+    }
+  </script>
 </head>
 
 <body>
-
   <div id="video-container">
     <div id="video-wrapper">
       <video id="main-video" controls poster="capa.png">
@@ -114,5 +111,8 @@
   <img id="small-image" src="foto.png" alt="Imagem Pequena">
 
   <button id="buy-button" onclick="redirectToLink()">
-    <i class="fas fa-shopping-cart"></i> Quero Comprar Agora
+    <i class="fas fa-shopping-cart"></i> QUERO COMPRAR AGORA
   </button>
+</body>
+
+</html>
