--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     #small-image {
       position: absolute;
       top: 3px;
-      right: 28%;
+      right: 22%;
       width: 210px;
       height: auto;
       z-index: 2;
@@ -58,7 +58,7 @@
     #buy-button {
       position: absolute;
       top: 80%;
-      left: 27%;
+      left: 21%;
       transform: translateX(-50%);
       background: linear-gradient(to bottom, #97cf27, #40c91e);
       color: #eef4ed;
@@ -90,7 +90,7 @@
   <script>
     function redirectToLink() {
       // Substitua o URL abaixo pelo link desejado
-      var link = "https://go.perfectpay.com.br/PPU38CNON8M";
+      var link = "https://go.perfectpay.com.br/PPPB8721";
       window.location.href = link;
     }
   </script>
