--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <script>
     function redirectToLink() {
       // Substitua o URL abaixo pelo link desejado
-      var link = "https://go.perfectpay.com.br/PPU38CNQBIF";
+      var link = "https://go.perfectpay.com.br/PPU38CNQBJJ";
       window.location.href = link;
     }
   </script>
